name:                p3
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable graph
  main-is:             graph.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , split
                     , diagrams-cairo
                     , hmatrix
                     , containers
                     , pqueue
                     , hashtables
                     , monad-loops
                     , basic-prelude
                     , vector
                     , array
                     , random
